--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "zhengjia-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://guozhengjia.github.io/zhengjia-portfolio",
+  "homepage": "https://ggggzj.github.io/Zhengjia.bio/",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
